# railyard

./: CLAUDE.md  Cargo.toml  README.md  SECURITY.md  settings.json
.claude-plugin/: plugin.json
defaults/: railyard.yaml
docs/: ARCHITECTURE.md
hooks/: hooks.json
npm/: demo.js  install.js  package.json
src/: configure.rs  lib.rs  main.rs  types.rs  update.rs
src/block/: evasion.rs
src/fence/: path.rs
src/hook/: handler.rs  pre_tool.rs  session.rs
src/install/: hooks.rs
src/policy/: defaults.rs  loader.rs
src/sandbox/: detect.rs  linux.rs  macos.rs  mod.rs  profile.rs
src/threat/: classifier.rs  killer.rs  mod.rs  state.rs
tests/: PENTEST-REPORT-R3.md  PENTEST-REPORT.md  attack_simulation.rs  threat_detection.rs
