[package]
name = "railyard"
version = "0.1.0"
edition = "2021"
description = "The runtime layer for AI agents in production"
license = "MIT"
repository = "https://github.com/railyarddev/railyard"
keywords = ["ai", "agents", "safety", "runtime", "claude"]

[[bin]]
name = "railyard"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
glob = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
colored = "3"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
