[package]
name = "railroad-ai"
version = "0.3.2"
edition = "2021"
description = "The runtime layer for AI agents in production"
license = "MIT"
repository = "https://github.com/railroaddev/railroad"
keywords = ["ai", "agents", "safety", "runtime", "claude"]

[lib]
name = "railroad"
path = "src/lib.rs"

[[bin]]
name = "railroad"
path = "src/main.rs"

[[bin]]
name = "railroad-shell"
path = "src/shell.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
glob = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
colored = "3"
dialoguer = "0.11"
console = "0.15"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
